In-progress stuff, additional-text fixes, and fav-albums 2025 (#17)
* Add list note for an in-progress list

* Update badge display in index

* Reduce between-lists margin that was too high

* Fix "in-progress" badge and templating missed the first time around

* Fix bug where no item additional text won't build

* Add favorite albums 2025 list

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,7 @@ body > * + * {
 }
 
 .list__item + .list__item {
-	margin-block-start: 3rem;
+	margin-block-start: 2rem;
 }
 
 .list__item:target .text--primary {
@@ -172,6 +172,7 @@ body > * + * {
 
 	border-radius: 5px;
 
+	margin-inline-start: 1ch;
 	padding: 0.2rem 0.4rem;
 }
 
@@ -181,4 +182,8 @@ body > * + * {
 
 .badge--draft {
 	background-color: lightpink;
+}
+
+.badge--in-progress {
+	background-color: skyblue;
 }
